--- a/Window/Window.vcxproj
+++ b/Window/Window.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="renderer.cpp" />
+    <ClCompile Include="scene.cpp" />
     <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +171,7 @@
     <ClInclude Include="input.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="scene.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="utility.h" />
   </ItemGroup>
