--- a/Window/Window.vcxproj.filters
+++ b/Window/Window.vcxproj.filters
@@ -79,5 +79,7 @@
     <FxCompile Include="VertexShader.hlsl" />
     <FxCompile Include="CubeMapPixelShader.hlsl" />
     <FxCompile Include="CubeMapVertexShader.hlsl" />
+    <FxCompile Include="TransVertexShader.hlsl" />
+    <FxCompile Include="TransPixelShader.hlsl" />
   </ItemGroup>
 </Project>
