--- a/Window/imgui.ini
+++ b/Window/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui]
-Pos=6,6
+Pos=26,9
 Size=362,506
 Collapsed=0
 
@@ -16,5 +16,15 @@ Collapsed=0
 [Window][Example: Simple layout]
 Pos=60,60
 Size=500,440
+Collapsed=0
+
+[Window][Lights]
+Pos=-1,2
+Size=308,734
+Collapsed=0
+
+[Window][Instances]
+Pos=306,2
+Size=118,133
 Collapsed=0
 
